--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -30,27 +30,36 @@ body {
   display: grid;
   grid-auto-flow: row;
   grid-template-rows: 55rem 4fr 30rem;
-  background-image: linear-gradient(
-    90deg,
-    var(--primerColor),
-    var(--tercerColor)
-  );
+  background-image: linear-gradient(90deg, var(--primerColor), var(--tercerColor));
+  background-repeat: no-repeat;
+  background-size: 250%;
 }
 /* inicio header */
-.header {
+.nav {
   display: grid;
-  grid-template-rows: 3rem 1fr;
+  grid-template-rows: 5rem 1fr;
   justify-items: center;
 }
 
+
 .nav__bar {
   display: grid;
-  justify-items: end;
 }
 
-.nav__profile-avatar {
-  font-size: var(--letraS);
-  padding: 2rem;
+.nav__bar__icon {
+  display: grid;
+  place-self: center;
+  width: 100%;
+}
+
+.nav__bar__icon2 {
+  font-size: var(--letraM);
+  color: var(--white);
+  margin: 2rem;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 1rem;
+  border-bottom: 0.4rem solid var(--segundoColor);
 }
 
 .nav__body {
@@ -79,7 +88,7 @@ body {
   padding: 1rem 0;
   color: var(--white);
   border-radius: 1rem;
-  border-bottom: 0.5rem solid var(--segundoColor);
+  border-bottom: 0.3rem solid var(--segundoColor);
 }
 
 .nav__card-youtube {
@@ -119,8 +128,11 @@ body {
 /* inicio main */
 
 main{
+  display: grid;
+  grid-auto-flow: row;
   margin: 10rem 1rem;
   font-family: var(--orbitron);
+  justify-content: center;
   /* box-shadow: 0 0 5rem var(--black); */
 }
 
@@ -132,6 +144,13 @@ main{
 
 }
 
+.section--welcome{
+  display: grid;
+  margin: 3rem;
+  grid-auto-flow: row;
+  justify-items: center;
+}
+
 .section__article {
   width: 100%;
   display: grid;
@@ -140,14 +159,26 @@ main{
   border-bottom: 0.5rem solid var(--segundoColor);
   
 }
+
+.section__article--welcome{
+  width: 100%;
+  display: grid;
+  background-color: var(--tercerColor);
+  border-radius: 3rem;
+  border-bottom: 0.5rem solid var(--segundoColor);
+}
+
 .section__titulo {
   font-size: var(--letraXs);
   letter-spacing: .5rem;
   padding: 3rem 0;
   color: var(--celeste);
   text-align: center;
+  height: 50%;
   border-bottom: 0.5rem solid var(--segundoColor);
   border-radius: 1rem;
+  display: grid;
+  align-self:center ;
 }
 
 .section__titulo2{
@@ -164,19 +195,18 @@ main{
   padding-top: 1.5rem;
   padding-left: 3rem;
   border-bottom: 0.5rem solid var(--segundoColor);
-  color: var(--segundoColor);
+  color: var(--white);
   padding-bottom: 2rem;
   border-radius: 1rem;
 }
 
 .section__text{
-  font-size: var(--letraXs);
+  font-size: var(--letraXss);
   line-height: 3rem;
   letter-spacing: .5rem;
   padding: 3rem;
   color: var(--white);
 }
-
 .rose{
   color: var(--segundoColor);
 }
@@ -186,7 +216,7 @@ main{
 }
 
 .section__ul__li {
-  font-size: var(--letraXs);
+  font-size: var(--letraXss);
   letter-spacing: .2rem;
   margin: 4rem;
   color: var(--white);
@@ -213,6 +243,7 @@ main{
 .footer {  
   font-family: var(--orbitron);
   width: 100%;
+  height: 100%;
   display: grid;
   background-color:var(--tercerColor);
   align-items: center;
@@ -220,11 +251,10 @@ main{
 
 .ul{
   margin-bottom: none;
-
 }
 
 .ul__li {
-  font-size: var(--letraXs);
+  font-size: var(--letraXss);
   letter-spacing: .2rem;
   list-style: none;
   margin: 3rem 0;
