modificaciones de estilo

--- a/src/CSS/desktop.css
+++ b/src/CSS/desktop.css
@@ -21,6 +21,11 @@ body{
 
 /* fin header */
 /* inicio main */
+
+.section__text {
+    font-size: var(--letraXs);
+}
+
 .section{
     grid-template-columns: 1fr 1fr 1fr ;
     grid-template-rows: 1fr 1fr;
