--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -41,9 +41,9 @@ body {
   justify-items: center;
 }
 
-
 .nav__bar {
   display: grid;
+  width: 100%;
 }
 
 .nav__bar__icon {
@@ -71,8 +71,8 @@ body {
 /* logo */
 .nav__image-logo2 {
   width: 30rem;
-  margin: 2rem 0 5rem 0;
-  filter: drop-shadow(0 0 3rem var(--segundoColor));
+  margin: 3rem 0 4rem 0;
+  filter: drop-shadow(0 0 4rem var(--segundoColor));
 }
 
 /* inicio contenedores de boton de redes sociales  */
@@ -149,6 +149,7 @@ main{
   margin: 3rem;
   grid-auto-flow: row;
   justify-items: center;
+  gap: 5rem;
 }
 
 .section__article {
@@ -157,7 +158,13 @@ main{
   background-color: var(--tercerColor);
   border-radius: 3rem;
   border-bottom: 0.5rem solid var(--segundoColor);
-  
+  grid-template-rows: 1fr 38rem 1fr;
+  transition: 1s;
+}
+
+.section__article:hover {
+  transform: scale(1.03);
+
 }
 
 .section__article--welcome{
@@ -215,6 +222,10 @@ main{
   color: var(--celeste)
 }
 
+.section__ul {
+  overflow:auto;
+}
+
 .section__ul__li {
   font-size: var(--letraXss);
   letter-spacing: .2rem;
@@ -223,17 +234,25 @@ main{
 }
 
 .section__button {
-  width: 15rem;
-  height: 5rem;
+  font-size: var(--letraXss);
+  width: 17rem;
+  height: 4rem;
   font-family: var(--orbitron);
   letter-spacing: .5rem;
   background-color: var(--tercerColor);
   color: var(--white);
-  border: none;
   border-bottom: 0.5rem solid var(--segundoColor);
   border-radius: 1rem;
   justify-self: end;
   margin: 3rem;
+  text-decoration: none;
+  text-align: center;
+  transition: .5s;
+}
+
+.section__button:hover {
+  color: var(--gray);
+  border-bottom: 0.5rem solid var(--celeste);
 
 }
 
@@ -260,7 +279,7 @@ main{
   margin: 3rem 0;
   color: var(--white);
   padding: 1rem;
-  transition: all .2s;
+  transition: all .15s;
 }
 
 .ul__li--d:hover{
@@ -285,3 +304,19 @@ main{
 
 
 /* fin footer */
+
+
+::-webkit-scrollbar {
+  width: 1rem;
+  background: var(--tercerColor);
+}
+
+::-webkit-scrollbar-track {
+  border: .1rem solid var(--segundoColor);
+  border-radius: 3rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--celeste);
+  border-radius: 3rem;
+}
