se actualizan algunos archivos

--- a/src/CSS/desktop.css
+++ b/src/CSS/desktop.css
@@ -27,8 +27,9 @@ body{
 }
 
 .section{
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(autofit,1fr);
 }
 
 .nav__card--y{
