--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -29,8 +29,9 @@ html {
 body {
   display: grid;
   grid-auto-flow: row;
-  grid-template-rows: 55rem 4fr 30rem;
-  background-image: linear-gradient(90deg, var(--primerColor), var(--tercerColor));
+  grid-template-rows: 55rem 4fr 25rem;
+  background: rgb(2,0,36);
+  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 14%, rgba(9,9,121,1) 100%);
   background-repeat: no-repeat;
   background-size: 250%;
 }
@@ -109,6 +110,7 @@ body {
   font-size: var(--icon);
 }
 
+
 .nav__card__titulo {
   font-size: var(--letraXs);
   margin-bottom: 0.5rem;
@@ -118,6 +120,12 @@ body {
 .nav__card__description2 {
   font-size: var(--letraXs);
   color: var(--segundoColor);
+  text-decoration: none;
+  transition: .5s;
+}
+
+.nav__card__description2:hover {
+  color: var(--celeste);
 }
 
 
@@ -133,7 +141,6 @@ main{
   margin: 10rem 1rem;
   font-family: var(--orbitron);
   justify-content: center;
-  /* box-shadow: 0 0 5rem var(--black); */
 }
 
 .section {
@@ -270,6 +277,9 @@ main{
 
 .ul{
   margin-bottom: none;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+
 }
 
 .ul__li {
@@ -282,12 +292,20 @@ main{
   transition: all .15s;
 }
 
+.ul__li--d {
+  grid-row: 2 / 3;
+}
+
 .ul__li--d:hover{
   border-bottom: 0.3rem solid var(--segundoColor);
 
 }
 
-.ul__li--w:hover, .ul__li--y:hover {
+.ul__li--y {
+  grid-row: 1 / 2;
+}
+
+.ul__li--y:hover {
   border-bottom: 0.3rem solid var(--celeste);
 
 }
@@ -300,7 +318,10 @@ main{
 .ul__li__icon {
   font-size: var(--icon);
   margin:.5rem;
+  float: left;
 }
+
+
 
 
 /* fin footer */
